--- a/src/0001.md
+++ b/src/0001.md
@@ -1,1 +1,35 @@
-这里面整理开发过程中遇到的
+# 涵义
+
+`this`可以用在构造函数之中，表示`实例对象`。
+
+`this`还可以用在别的场合。但不管是什么场合，this都有一个共同点：它总是`返回一个对象`。
+
+``` javascript
+// this就代表property属性“运行时”所在的对象。
+var person = {
+  name: '张三',
+  describe: function () {
+    return '姓名：'+ this.name;
+  }
+};
+
+person.describe()
+// "姓名：张三"
+```
+
+``` javascript
+var A = {
+  name: '张三',
+  describe: function () {
+    return '姓名：'+ this.name;
+  }
+};
+
+var B = {
+  name: '李四'
+};
+
+B.describe = A.describe;
+B.describe()
+// "姓名：李四"
+```
