--- a/src/0013.md
+++ b/src/0013.md
@@ -21,37 +21,63 @@ for(var i = 0; i < a.length; i++) {
 }
 ```
 
-# 2. while 、 do while
+# 2. for ... of
 
-do while先执行后判断，循环至少执行一次，即便条件为false
+一个数据结构只要部署了Symbol.iterator属性（可遍历），就被视为具有 iterator 接口，就可以用for...of循环遍历它的成员
 
-while先判断后执行
+``` js
+const arr = ['red', 'green', 'blue'];
 
-```js
-var a = [1, 2, 3];
-
-var i = 0;
-while (i < a.length) {
-  console.log(a[i]);
-  i++;
-}
-
-var l = a.length;
-while (l >= 0) {
-  console.log(a[l]);
-  l--
+for(let v of arr) {
+  console.log(v); // red green blue
 }
 ```
 
-```js
-let i = 2;
+``` js
+const arr = [
+  {name: 'jake', age: 18},
+  {name: 'joy', age: 19},
+  {name: 'mike', age: 20},
+  {name: 'tom', age: 21}
+]
 
-do {
-  console.lg(i);  // 2
-  i++
-} while (i < 2) {
-  console.log(i);   // 3
+for(let item of arr) {
+  console.log(item);
+  // {name: 'jake', age: 18},
+  // {name: 'joy', age: 19},
+  // {name: 'mike', age: 20},
+  // {name: 'tom', age: 21}
 }
+```
+
+1. 无法遍历对象(对象无interator接口)在可迭代对象（包括Array，Map，Set，String，TypedArray，arguments 对象等等
+
+2. 结果是数据的每一项
+
+3. 不会遍历自定义属性
+
+``` js
+Object.prototype.objCustom = function() {}; 
+Array.prototype.arrCustom = function() {};
+
+let iterable = [3, 5, 7];
+iterable.foo = 'hello';
+
+for (let i in iterable) {
+  console.log(i); // 0, 1, 2, "foo", "arrCustom", "objCustom"
+}
+
+for (let i in iterable) { 
+  if (iterable.hasOwnProperty(i)) {
+    // 所以不推荐使用for...in遍历数组，会多出 foo 这个
+    console.log(i); // 0, 1, 2, "foo"
+  }
+}
+
+for (let i of iterable) {
+  console.log(i); // logs 3, 5, 7
+}
+
 ```
 
 # 3. 判断一个 object 是否是数组
@@ -498,62 +524,37 @@ users
 find() 对于空数组，函数是不会执行的。
 
 
-# 20. for ... of
+# 20. while 、 do while
 
-一个数据结构只要部署了Symbol.iterator属性，就被视为具有 iterator 接口，就可以用for...of循环遍历它的成员
+do while先执行后判断，循环至少执行一次，即便条件为false
 
-``` js
-const arr = ['red', 'green', 'blue'];
+while先判断后执行
 
-for(let v of arr) {
-  console.log(v); // red green blue
+```js
+var a = [1, 2, 3];
+
+var i = 0;
+while (i < a.length) {
+  console.log(a[i]);
+  i++;
+}
+
+var l = a.length;
+while (l >= 0) {
+  console.log(a[l]);
+  l--
 }
 ```
 
-``` js
-const arr = [
-  {name: 'jake', age: 18},
-  {name: 'joy', age: 19},
-  {name: 'mike', age: 20},
-  {name: 'tom', age: 21}
-]
+```js
+let i = 2;
 
-for(let item of arr) {
-  console.log(item);
-  // {name: 'jake', age: 18},
-  // {name: 'joy', age: 19},
-  // {name: 'mike', age: 20},
-  // {name: 'tom', age: 21}
+do {
+  console.lg(i);  // 2
+  i++
+} while (i < 2) {
+  console.log(i);   // 3
 }
-```
-
-1. 无法遍历对象(对象无interator接口)在可迭代对象（包括Array，Map，Set，String，TypedArray，arguments 对象等等
-
-2. 结果是数据的每一项
-
-3. 不会遍历自定义属性
-
-``` js
-Object.prototype.objCustom = function() {}; 
-Array.prototype.arrCustom = function() {};
-
-let iterable = [3, 5, 7];
-iterable.foo = 'hello';
-
-for (let i in iterable) {
-  console.log(i); // 0, 1, 2, "foo", "arrCustom", "objCustom"
-}
-
-for (let i in iterable) {
-  if (iterable.hasOwnProperty(i)) {
-    console.log(i); // 0, 1, 2, "foo"
-  }
-}
-
-for (let i of iterable) {
-  console.log(i); // logs 3, 5, 7
-}
-
 ```
 
 
