--- a/src/0014.md
+++ b/src/0014.md
@@ -1,4 +1,4 @@
-# valueOf()
+### valueOf()
 
 valueOf方法是一个所有对象都拥有的方法，返回指定对象的原始值。
 
@@ -58,7 +58,7 @@ s.valueOf()       // Symbol()
 
 ```
 
-# toString()
+### toString()
 
 toString方法也是对象的通用方法，数组的toString方法返回数组的字符串形式。
 
