--- a/src/0012.md
+++ b/src/0012.md
@@ -1,4 +1,4 @@
-# hash 模式
+### hash 模式
 
 
 a 标签锚点大家应该不陌生，而浏览器地址上 # 后面的变化，是可以被监听的，浏览器为我们提供了原生监听事件 hashchange ，它可以监听到如下的变化：
@@ -8,7 +8,7 @@ a 标签锚点大家应该不陌生，而浏览器地址上 # 后面的变化，
 - 通过 window.location 方法，改变浏览器地址
 
 
-# history 模式
+### history 模式
 
 这种模式要玩好，还需要后台配置支持
 
@@ -23,6 +23,6 @@ history 模式会比 hash 模式稍麻烦一些，因为 history 模式依赖的
 
 这里注意，不能在浏览器直接打开静态文件，需要通过 web 服务，启动端口去浏览网址。
 
-# 参考
+### 参考
 
 https://juejin.cn/post/6917523941435113486
