feat: update toString valueOf

--- a/src/0013.md
+++ b/src/0013.md
@@ -174,7 +174,39 @@ Array.prototype.join.call(obj, '-')
 // 'a-b'
 ```
 
-# 7. concat() -- 返回一个新数组，原数组不变
+### concat() -- 返回一个新数组，原数组不变
+
+- 正常的赋值数组，修改源数组会影响现在的数组
+
+```js
+const a1 = [1, 2];
+const a2 = a1;
+
+a2[0] = 2;
+a1 // [2, 2]
+```
+
+- 可以使用 `concat` 解决（es5）
+
+```js
+const a1 = [1, 2];
+const a2 = a1.concat();
+
+a2[0] = 2;
+a1 // [1, 2]
+```
+
+- 也可以使用 `扩展运算符` 解决（es6 `推荐这种`）
+
+```js
+const a1 = [1, 2];
+// 写法一
+const a2 = [...a1];
+// 写法二
+const [...a2] = a1;
+```
+
+- 合并数组 (es5)
 
 ``` js
 ['hello'].concat(['world'])
@@ -188,28 +220,43 @@ Array.prototype.join.call(obj, '-')
 
 [2].concat({a: 1})
 // [2, {a: 1}]
-```
 
-除了数组作为参数，concat也接受其他类型的值作为参数，添加到目标数组尾部。
-
-``` js
 [1, 2, 3].concat(4, 5, 6)
 // [1, 2, 3, 4, 5, 6]
 ```
 
-如果数组成员包括对象，concat方法返回当前数组的一个浅拷贝。所谓“浅拷贝”，指的是新数组拷贝的是对象的引用。
+- 通过`扩展运算符`合并数组（es6 `推荐这种`）
 
-``` js
-var obj = { a: 1 };
-var oldArray = [obj];
+```js
+const arr1 = ['a', 'b'];
+const arr2 = ['c'];
+const arr3 = ['d', 'e'];
 
-var newArray = oldArray.concat();
+// ES5 的合并数组
+arr1.concat(arr2, arr3);
+// [ 'a', 'b', 'c', 'd', 'e' ]
 
-obj.a = 2;
-newArray[0].a // 2
+// ES6 的合并数组
+[...arr1, ...arr2, ...arr3]
+// [ 'a', 'b', 'c', 'd', 'e' ]
 ```
 
-# 8. reverse() -- 改变原数组
+- `cancat` 和 `扩展运算符` 都是`浅拷贝`，成员是对象的时候，都是对原数组成员的引用，这就是浅拷贝。
+
+``` js
+const a1 = [{ foo: 1 }];
+const a2 = [{ bar: 2 }];
+
+const a3 = a1.concat(a2);
+const a4 = [...a1, ...a2];
+
+a3[0] === a1[0] // true
+a4[0] === a1[0] // true
+```
+
+### 8. reverse()
+
+改变原数组
 
 ``` js
 let a = ['a', 'b', 'c'];
