--- a/src/0100/0120/0014.md
+++ b/src/0100/0120/0014.md
@@ -69,3 +69,13 @@ arr.toString() // "1,2,3"
 var arr = [1, 2, 3, [4, 5, 6]];
 arr.toString() // "1,2,3,4,5,6"
 ```
+
+
+### 什么时候会自动调用
+
+只有需要隐式类型转换的时候才会自动的调用 toString 和 valueOf
+
+- 比如：
+  - alert 只能输出字符串，如果输入的不是字符串，就会默认调用 toString 来进行转换，如果 toString 被我们重写了，就会返回我们自定义的返回结果
+  - 输出的值我们使用了 `模版字符串`，调用 toString
+  - 输出的值乘以1，或者自增，会自动调用 valueOf
