--- a/src/0100/0130/0023.md
+++ b/src/0100/0130/0023.md
@@ -66,18 +66,31 @@ const url2 = urlBase("/get/aa/");
 在实现一个求和函数的时候，希望传入的参数能满足 sum(1)(2)(3)(4);
 
 ```js
-function currying(func) {
-  const args = [];
-  return function result(...rest) {
-    if (rest.length === 0) return func(...args);
-    args.push(...rest);
-    return result;
-  };
-}
-const add = (...args) => args.reduce((a, b) => a + b);
-const sum = currying(add);
+// 实现一个add方法，使计算结果能够满足如下预期：
+// add(1)(2)(3) = 6;
+// add(1, 2, 3)(4) = 10;
+// add(1)(2)(3)(4)(5) = 15;
 
-console.log(sum(1)(2)(3)(4)()); // 10
+const add = (...a) => {
+  let num = a.reduce((t, c) => t + c, 0);
+
+  const item = (...b) => {
+    num = num + b.reduce((t, c) => t + c, 0);
+    return item;
+  };
+
+  item.toString = () => num;
+
+  return item;
+};
+
+// 需要放在alert中触发toString，才能看到正确结果；如果用console.log，结果是函数，不能触发 toString
+// 因为alert只能输出字符串，发生了隐式类型转换，就会调用 toString 和 valueOf
+// 因为 console 可以输出各种类型，所以不会发生隐式类型转换，所以就不会调用 toString 和 valueOf
+alert(add(1)(2)(3)); // 6
+alert(add(1, 2, 3)(4)); // 10
+alert(add(1)(2)(3)(4)(5)); // 15
+alert(add(2, 6)(1)); // 9
 ```
 
 ### 动态创建
