--- a/src/0100/0120/0014.md
+++ b/src/0100/0120/0014.md
@@ -73,9 +73,38 @@ arr.toString() // "1,2,3,4,5,6"
 
 ### 什么时候会自动调用
 
-只有需要隐式类型转换的时候才会自动的调用 toString 和 valueOf
+toString 和 valueOf 是一直会调用的，但是里面输出的内容需要注意一下，可能发生类型转换，
 
 - 比如：
-  - alert 只能输出字符串，如果输入的不是字符串，就会默认调用 toString 来进行转换，如果 toString 被我们重写了，就会返回我们自定义的返回结果
+  - alert 只能输出字符串，如果输入的不是字符串，
   - 输出的值我们使用了 `模版字符串`，调用 toString
   - 输出的值乘以1，或者自增，会自动调用 valueOf
+
+
+下面这个输出就有问题
+
+```js
+function add() {
+    // 第一次执行时，定义一个数组专门用来存储所有的参数
+    var _args = Array.prototype.slice.call(arguments);
+
+    // 在内部声明一个函数，利用闭包的特性保存_args并收集所有的参数值
+    var _adder = function() {
+        _args.push(...arguments);
+        return _adder;
+    };
+
+    // 利用toString隐式转换的特性，当最后执行时隐式转换，并计算最终的值返回
+    _adder.toString = function () {
+        return _args.reduce(function (a, b) {
+            return a + b;
+        });
+    }
+    return _adder;
+}
+
+add(1)(2)(3)  // 输出的是一个function
+
+// 下面这个输出的是 6，因为发生了类型转换
+alert(add(1)(2)(3))
+```
