--- a/src/0100/0140/0033.md
+++ b/src/0100/0140/0033.md
@@ -1,4 +1,4 @@
-### Object.assign、扩展运算符
+## Object.assign、扩展运算符
 
 > Object.assign 、扩展运算符 是 浅拷贝
 
@@ -19,4 +19,26 @@ const obj2 = Object.assign({}, obj1);
 
 obj1.a.b = 2;
 obj2.a.b; // 2
+```
+
+## 作用域
+
+**JavaScript采用的是静态作用域，函数定义的位置就决定了函数的作用域**
+
+- **作用域：**规定了如何查找变量。
+- **静态作用域：**又称词法作用域，函数的作用域在函数定义的时候就决定了，通俗点说就是你在写代码时将变量和块作用域写在哪里决定的。
+- **动态作用域：**函数的作用域在函数调用时才决定的。
+
+```js
+var val = 1;
+function test() {
+    console.log(val);
+}
+function bar() {
+    var val = 2;
+    test();
+}
+
+bar();
+// 结果是 1
 ```
